# Ranking

./: Cargo.toml  README.md  clippy.toml
cli/: Cargo.toml
cli/benches/: cli.rs
cli/src/: main.rs  utils.rs
simulations/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
src/: lib.rs  traits.rs
