[package]
name = "bacrama-ranking"
version.workspace = true
readme = "README.md"
repository.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[workspace]
members = ["cli"]

[workspace.package]
version = "0.1.0"
repository = "https://github.com/Uastamasta-ASD/Ranking"
license = "Apache-2.0"
edition = "2021"

[dependencies]
thiserror = "1.0.65"

[profile.bench]
debug = true # Required by iai-callgrind (see cli)
strip = false # Required by iai-callgrind (see cli)
