[package]
name = "bacrama-ranking-cli"
version.workspace = true
readme = "../README.md"
repository.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[dependencies]
bacrama-ranking = { path = ".." }
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
fxhash = "0.2.1"
smol_str = { version = "0.3.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.11.0"
tabwriter = "1.4.0"
